syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package users;

option go_package = "/users";

message User{
  int64 id = 1;
  string fname = 2;
  string lname = 3;
  string email = 4;
  string username = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message UserPayload {
  User user = 1;
  string password = 2;
}

message UserResponse {
  User user = 1;
}

message Userid {
  int64 Id = 1;
}

service UserService {
  rpc CreateUser(UserPayload) returns (Userid);
  rpc FindById (Userid) returns (UserResponse);
  rpc FindUsers (google.protobuf.Empty) returns (stream UserResponse);
  rpc Update (UserPayload) returns (google.protobuf.Empty);
  rpc DeleteByid (Userid) returns (google.protobuf.Empty);
}